--- a/src/main/java/pt/ipleiria/estg/dei/ei/esoft/Main.form
+++ b/src/main/java/pt/ipleiria/estg/dei/ei/esoft/Main.form
@@ -43,7 +43,7 @@
               <text value="Dados Pessoais"/>
             </properties>
           </component>
-          <component id="26208" class="javax.swing.JButton" binding="dadosEstatisticosButton" default-binding="true">
+          <component id="26208" class="javax.swing.JButton" binding="btnDadosEstatisticos">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
