--- a/src/main/java/pt/ipleiria/estg/dei/ei/esoft/AdicionarJogador.form
+++ b/src/main/java/pt/ipleiria/estg/dei/ei/esoft/AdicionarJogador.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="pt.ipleiria.estg.dei.ei.esoft.AdicionarJogador">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="painelContratar" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -92,7 +92,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="7ded1" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="7ded1" class="javax.swing.JTextField" binding="txtNome">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -158,7 +158,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="4eba7" class="javax.swing.JButton" binding="cancelarButton" default-binding="true">
+          <component id="4eba7" class="javax.swing.JButton" binding="btnCancelar">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -166,7 +166,7 @@
               <text value="Cancelar"/>
             </properties>
           </component>
-          <component id="57d8e" class="javax.swing.JButton" binding="adicionarButton" default-binding="true">
+          <component id="57d8e" class="javax.swing.JButton" binding="btnContratar">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
