--- a/src/main/java/pt/ipleiria/estg/dei/ei/esoft/AdicionarJogador.form
+++ b/src/main/java/pt/ipleiria/estg/dei/ei/esoft/AdicionarJogador.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="painelContratar" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="697" height="400"/>
+      <xy x="20" y="20" width="753" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -124,14 +124,6 @@
             </constraints>
             <properties/>
           </component>
-          <component id="aa054" class="javax.swing.JTextField" binding="textField6" default-binding="true">
-            <constraints>
-              <grid row="5" column="0" row-span="1" col-span="6" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
           <component id="cbd6a" class="javax.swing.JTextField" binding="textPosicaoPreferida">
             <constraints>
               <grid row="6" column="0" row-span="1" col-span="6" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -188,6 +180,22 @@
             </constraints>
             <properties>
               <text value="ano:"/>
+            </properties>
+          </component>
+          <component id="ffdad" class="javax.swing.JButton" binding="esquerdoButton" default-binding="true">
+            <constraints>
+              <grid row="5" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Esquerdo"/>
+            </properties>
+          </component>
+          <component id="a51b5" class="javax.swing.JButton" binding="direitoButton" default-binding="true">
+            <constraints>
+              <grid row="5" column="4" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Direito"/>
             </properties>
           </component>
         </children>
