--- a/src/main/java/pt/ipleiria/estg/dei/ei/esoft/JanelaDadosPessoais.form
+++ b/src/main/java/pt/ipleiria/estg/dei/ei/esoft/JanelaDadosPessoais.form
@@ -42,29 +42,16 @@
               </component>
             </children>
           </grid>
-          <grid id="3af6c" binding="jpDados" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+          <grid id="3af6c" binding="jpDados" layout-manager="CardLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
-            <border type="none"/>
-            <children>
-              <component id="2f1b2" class="javax.swing.JTable" binding="table">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="50"/>
-                  </grid>
-                </constraints>
-                <properties/>
-              </component>
-              <component id="13238" class="javax.swing.JScrollBar" binding="scrollBar1" default-binding="true">
-                <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties/>
-              </component>
-            </children>
+            <border type="line" title="Dados" title-justification="2" title-position="2">
+              <font/>
+              <color color="-3755022"/>
+            </border>
+            <children/>
           </grid>
         </children>
       </grid>
